Forward port r115 from branches/5.0:

Fix bug #16157, a crash when innodb_log_group_home_dir is set to an empty
string. This patch is from Heikki.